added search and css fixes

--- a/src/index.css
+++ b/src/index.css
@@ -8,3 +8,20 @@ main{
     min-height: 80vh;
     padding: 10px;
 }
+
+header {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    z-index: 1000;
+  }
+  
+  footer {
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    z-index: 1000;
+  }
+  
